[gd_scene format=3 uid="uid://bgo8l1gfu5l4w"]

[ext_resource type="Script" uid="uid://bj2wbfwxhafng" path="res://actors/bonun/bonun.gd" id="1_qv47h"]
[ext_resource type="SpriteFrames" uid="uid://4repkhch3xdd" path="res://assets/bonun/frames.tres" id="2_e7n66"]
[ext_resource type="Script" uid="uid://0jiyn3ggg7i7" path="res://components/movement/move.gd" id="14_t0fld"]
[ext_resource type="Script" uid="uid://bplsnnnm84yir" path="res://components/hurtbox_component.gd" id="15_hl21u"]
[ext_resource type="Script" uid="uid://dsqm8jb3i2qou" path="res://components/movement/move_input_path_finding.gd" id="15_jtb2s"]
[ext_resource type="PackedScene" uid="uid://ma0tsvblieoh" path="res://weapons/base/base.tscn" id="16_2inhk"]
[ext_resource type="Script" uid="uid://dwftx2inc4tqn" path="res://components/movement/stats.gd" id="16_2psn5"]
[ext_resource type="PackedScene" uid="uid://degci2dq7u1r3" path="res://projectiles/bone_fragment/bone_fragment.tscn" id="19_5y5kl"]
[ext_resource type="Script" path="res://components/drops_component.gd" id="19_pcexe"]
[ext_resource type="Script" uid="uid://cnh2qn5i60evh" path="res://components/stats_component.gd" id="20_l0kqt"]
[ext_resource type="Script" uid="uid://c7f802exmchc0" path="res://components/damage_component.gd" id="21_5y5kl"]
[ext_resource type="Script" uid="uid://betamc0v85hha" path="res://components/destroyed_component.gd" id="22_148f2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2inhk"]
radius = 47.853943

[sub_resource type="Resource" id="Resource_jtb2s"]
script = ExtResource("16_2psn5")
speed = 500
metadata/_custom_type_script = "uid://dwftx2inc4tqn"

[sub_resource type="CircleShape2D" id="CircleShape2D_sfjoh"]
radius = 48.270073

[node name="Bonun" type="CharacterBody2D" unique_id=1259638105]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_qv47h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=395704127]
z_index = 1
sprite_frames = ExtResource("2_e7n66")
autoplay = "default"
frame_progress = 0.51219594

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2002898332]
position = Vector2(0, 39)
scale = Vector2(1.414, 1.414)
shape = SubResource("CircleShape2D_2inhk")

[node name="MoveComponent" type="Node" parent="." unique_id=885344095 node_paths=PackedStringArray("actor", "moveInputComponent")]
script = ExtResource("14_t0fld")
actor = NodePath("..")
velocity = Vector2(0, 230)
moveInputComponent = NodePath("../MoveInputPathFindingComponent")

[node name="MoveInputPathFindingComponent" type="Node2D" parent="." unique_id=2004311468 node_paths=PackedStringArray("moveComponent")]
script = ExtResource("15_jtb2s")
moveComponent = NodePath("../MoveComponent")
moveStats = SubResource("Resource_jtb2s")
metadata/_custom_type_script = "uid://dsqm8jb3i2qou"

[node name="HurtboxComponent" type="Area2D" parent="." unique_id=689255192]
collision_layer = 2
collision_mask = 0
script = ExtResource("15_hl21u")
metadata/_custom_type_script = "uid://bplsnnnm84yir"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" unique_id=51897163]
position = Vector2(0, 39)
scale = Vector2(1.414, 1.414)
shape = SubResource("CircleShape2D_sfjoh")

[node name="Weapon" parent="." unique_id=1244389419 instance=ExtResource("16_2inhk")]
target = 1
bullet = ExtResource("19_5y5kl")

[node name="DropsComponent" type="Node" parent="." unique_id=564494967]
script = ExtResource("19_pcexe")
viewsRewardBase = 15
viewsRewardVariance = 3

[node name="StatsComponent" type="Node" parent="." unique_id=994675849]
script = ExtResource("20_l0kqt")
metadata/_custom_type_script = "uid://cnh2qn5i60evh"

[node name="DamageComponent" type="Node" parent="." unique_id=2033414461 node_paths=PackedStringArray("hurtboxComponent", "statsComponent") groups=["DamageComponents"]]
script = ExtResource("21_5y5kl")
hurtboxComponent = NodePath("../HurtboxComponent")
statsComponent = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://c7f802exmchc0"

[node name="DestroyedComponent" type="Node" parent="." unique_id=622172180 node_paths=PackedStringArray("actor", "statsComponent")]
script = ExtResource("22_148f2")
actor = NodePath("..")
statsComponent = NodePath("../StatsComponent")
metadata/_custom_type_script = "uid://betamc0v85hha"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." unique_id=821889579]
